# undercloud_containers

./: .gitignore  README.md  Vagrantfile  build_kolla.sh  cleanup.sh  cleanup_everything.sh  doit.sh  dprince.sh  dprince_flavors.sh  dprince_post.sh  everything_should_be_clean.sh  iteration_cleanup.sh  post_install.sh  pstree.sh  setup.cfg  test.sh  undercloud-vm.sh  undercloud.conf  vm_doit.sh
playbooks/: undercloud_containers.yml
roles/undercloud-containers/defaults/: main.yml
roles/undercloud-containers/files/: README.md
roles/undercloud-containers/meta/: main.yml
roles/undercloud-containers/tasks/: create-scripts.yml  install-undercloud.yml  main.yml  post-install.yml
