[metadata]
name = undercloud_containers 
summary = development role used for tripleo and containers
description-file =
    README.md
author = Dan Prince
author-email = dprince@redhat.com
author = Wes Hayutin
author-email = weshayutin@redhat.com
home-page = http://docs.openstack.org/developer/tripleo-quickstart/
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config = config/*
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*
    usr/local/share/ansible/roles/undercloud-containers/files = build_kolla.sh
    usr/local/share/ansible/roles/undercloud-containers/files = cleanup.sh
    usr/local/share/ansible/roles/undercloud-containers/files = doit.sh
    usr/local/share/ansible/roles/undercloud-containers/files = dprince.sh
    usr/local/share/ansible/roles/undercloud-containers/files = post_install.sh
    usr/local/share/ansible/roles/undercloud-containers/files = undercloud-vm.sh
    usr/local/share/ansible/roles/undercloud-containers/files = vm_doit.sh

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
